# ScreepsApi-V12

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: ScreepsApiV12-Config.cmake  ScreepsApiV12Config.cmake
include/Api-V12/: Api.hpp  Data.hpp
include/Api-V12/Routers/: Api.hpp  Auth.hpp  Client.hpp  Game.hpp  Register.hpp  Socket.hpp  User.hpp
src/: Api.cpp  Data.cpp  V12.cpp
src/Routers/: Api.cpp  Auth.cpp  Client.cpp  Game.cpp  Register.cpp  Socket.cpp  User.cpp
